@@ -1,3 +1,3 @@
 short_name="de"
 long_name="Deutsch"
-
+status='official'
