@@ -68,11 +68,30 @@
 	   	  	
 	   	  	<?
    	  		foreach($available_languages as $lang) {
+   				if($lang['status'] != 'official') {
+   	  				$user_languages[] = $lang;
+   	  				continue;
+   	  			}
 		 		print "<option id='option_".$lang["short_name"]."' value='".$lang["short_name"]."'>";
 		 		print $lang["long_name"];
 		 		print "</option>\n";
    	  			
-   	  		} 
+   	  		}
+     		if(sizeof($user_languages)) {
+     			print "<optgroup label='".t("User contributed languages")."'>";
+     			
+	     		foreach($user_languages as $lang) {
+	     			if($lang['status'] != 'user') continue;
+		 		print "<option id='option_".$lang["short_name"]."' value='".$lang["short_name"]."'";
+		 		print (isset($lang['default']) && $lang['default'])?" selected='SELECTED'":"";
+		 		print ">";
+		 		print $lang["long_name"];
+		 		print "</option>\n";
+	     			
+	     		}
+     			print "</optgroup>";
+     		}?>
+   	  		
 	   	  	?>
 		  </select>
 	   
